@@ -1,2 +1,94 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2002/06/28 07:40:29 jlam Exp $
+@comment $NetBSD: PLIST,v 1.2 2002/11/19 23:22:41 jlam Exp $
 lib/httpd/mod_perl.so
+share/doc/html/mod_perl/TODO
+share/doc/html/mod_perl/api/AUTOGENERATION
+share/doc/html/mod_perl/api/ModPerl-Registry/ModPerl/PerlRun.pod
+share/doc/html/mod_perl/api/ModPerl-Registry/ModPerl/Registry.pod
+share/doc/html/mod_perl/api/ModPerl-Registry/ModPerl/RegistryBB.pod
+share/doc/html/mod_perl/api/ModPerl-Registry/ModPerl/RegistryCooker.pod
+share/doc/html/mod_perl/api/ModPerl-Registry/ModPerl/RegistryLoader.pod
+share/doc/html/mod_perl/api/README
+share/doc/html/mod_perl/api/config.cfg
+share/doc/html/mod_perl/api/index_bot.html
+share/doc/html/mod_perl/api/mod_perl-2.0/APR/PerlIO.pod
+share/doc/html/mod_perl/api/mod_perl-2.0/APR/Table.pod
+share/doc/html/mod_perl/api/mod_perl-2.0/Apache/Log.pod
+share/doc/html/mod_perl/api/mod_perl-2.0/Apache/Reload.pod
+share/doc/html/mod_perl/api/mod_perl-2.0/Apache/RequestRec.pod
+share/doc/html/mod_perl/api/mod_perl-2.0/Apache/ServerUtil.pod
+share/doc/html/mod_perl/api/mod_perl-2.0/Apache/SubProcess.pod
+share/doc/html/mod_perl/api/mod_perl-2.0/Apache/compat.pod
+share/doc/html/mod_perl/api/mod_perl-2.0/Makefile
+share/doc/html/mod_perl/api/mod_perl-2.0/Makefile.PL
+share/doc/html/mod_perl/api/mod_perl-2.0/pm_to_blib
+share/doc/html/mod_perl/config.cfg
+share/doc/html/mod_perl/devel/Changes.pod
+share/doc/html/mod_perl/devel/config.cfg
+share/doc/html/mod_perl/devel/core_explained/core_explained.pod
+share/doc/html/mod_perl/devel/debug_c/debug_c.pod
+share/doc/html/mod_perl/devel/debug_perl/debug_perl.pod
+share/doc/html/mod_perl/devel/help/help.pod
+share/doc/html/mod_perl/devel/modperl_style/modperl_style.pod
+share/doc/html/mod_perl/devel/perf_sizeof/perf_sizeof.pod
+share/doc/html/mod_perl/devel/porting/porting.pod
+share/doc/html/mod_perl/os/config.cfg
+share/doc/html/mod_perl/os/win32/Changes.pod
+share/doc/html/mod_perl/os/win32/config.cfg
+share/doc/html/mod_perl/os/win32/config.pod
+share/doc/html/mod_perl/os/win32/install.pod
+share/doc/html/mod_perl/user/Changes.pod
+share/doc/html/mod_perl/user/coding/coding.pod
+share/doc/html/mod_perl/user/compat/compat.pod
+share/doc/html/mod_perl/user/config.cfg
+share/doc/html/mod_perl/user/config/config.pod
+share/doc/html/mod_perl/user/design/design.pod
+share/doc/html/mod_perl/user/handlers/bucket_brigades.dia
+share/doc/html/mod_perl/user/handlers/bucket_brigades.gif
+share/doc/html/mod_perl/user/handlers/bucket_brigades.png
+share/doc/html/mod_perl/user/handlers/connection_cycle.dia
+share/doc/html/mod_perl/user/handlers/connection_cycle.gif
+share/doc/html/mod_perl/user/handlers/connection_cycle.png
+share/doc/html/mod_perl/user/handlers/filters.pod
+share/doc/html/mod_perl/user/handlers/http.pod
+share/doc/html/mod_perl/user/handlers/http_cycle.dia
+share/doc/html/mod_perl/user/handlers/http_cycle.gif
+share/doc/html/mod_perl/user/handlers/http_cycle.png
+share/doc/html/mod_perl/user/handlers/intro.pod
+share/doc/html/mod_perl/user/handlers/protocols.pod
+share/doc/html/mod_perl/user/handlers/server.pod
+share/doc/html/mod_perl/user/handlers/server_life_cycle.dia
+share/doc/html/mod_perl/user/handlers/server_life_cycle.gif
+share/doc/html/mod_perl/user/handlers/server_life_cycle.png
+share/doc/html/mod_perl/user/help/help.pod
+share/doc/html/mod_perl/user/install/install.pod
+share/doc/html/mod_perl/user/intro/start_fast.pod
+share/doc/html/mod_perl/user/overview/overview.pod
+share/doc/html/mod_perl/user/troubleshooting/troubleshooting.pod
+@dirrm share/doc/html/mod_perl/user/troubleshooting
+@dirrm share/doc/html/mod_perl/user/overview
+@dirrm share/doc/html/mod_perl/user/intro
+@dirrm share/doc/html/mod_perl/user/install
+@dirrm share/doc/html/mod_perl/user/help
+@dirrm share/doc/html/mod_perl/user/handlers
+@dirrm share/doc/html/mod_perl/user/design
+@dirrm share/doc/html/mod_perl/user/config
+@dirrm share/doc/html/mod_perl/user/compat
+@dirrm share/doc/html/mod_perl/user/coding
+@dirrm share/doc/html/mod_perl/user
+@dirrm share/doc/html/mod_perl/os/win32
+@dirrm share/doc/html/mod_perl/os
+@dirrm share/doc/html/mod_perl/devel/porting
+@dirrm share/doc/html/mod_perl/devel/perf_sizeof
+@dirrm share/doc/html/mod_perl/devel/modperl_style
+@dirrm share/doc/html/mod_perl/devel/help
+@dirrm share/doc/html/mod_perl/devel/debug_perl
+@dirrm share/doc/html/mod_perl/devel/debug_c
+@dirrm share/doc/html/mod_perl/devel/core_explained
+@dirrm share/doc/html/mod_perl/devel
+@dirrm share/doc/html/mod_perl/api/mod_perl-2.0/Apache
+@dirrm share/doc/html/mod_perl/api/mod_perl-2.0/APR
+@dirrm share/doc/html/mod_perl/api/mod_perl-2.0
+@dirrm share/doc/html/mod_perl/api/ModPerl-Registry/ModPerl
+@dirrm share/doc/html/mod_perl/api/ModPerl-Registry
+@dirrm share/doc/html/mod_perl/api
+@dirrm share/doc/html/mod_perl
