@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1 2002/11/19 23:23:11 jlam Exp $
+
+SHA1 (mod_perl-1.99_07.tar.gz) = fb39dbbc77577c220a5b9b9112a50e2cadefc90d
+Size (mod_perl-1.99_07.tar.gz) = 610901 bytes
