@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.557 2002/11/19 23:04:59 jlam Exp $
+$NetBSD: CHANGES,v 1.558 2002/11/19 23:22:51 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2002:
 
@@ -3665,3 +3665,4 @@ Changes to the packages collection and infrastructure in 2002:
 	Updated amaya to 6.4 [reinoud 2002-11-19]
 	Updated ettercap to 0.6.7 [agc 2002-11-19]
 	Updated ap-ssl to 2.8.12nb1 [jlam 2002-11-19]
+	Updated ap2-perl to 1.99.7 [jlam 2002-11-19]
